--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello, I’m Brody.</h1>
-  <p>Welcome to my personal site. This page is hosted on GitHub Pages and linked through Porkbun.</p>
+  <h1>ctrl-B.</h1>
+  <p>We are an experimental electro-acoustic trio based in Portland, OR.</p>
 </body>
 </html>
