--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <h1>ctrl-B.</h1>
+  <img src="images/ctrlb_basement.jpg" width="600">
   <p>We are an experimental electro-acoustic trio based in Portland, OR.</p>
 </body>
 </html>
