--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ctrl-B</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ctrl-B</title>
   <style>
     body {
-      font-family: system-ui, sans-serif;
-      margin: 2rem;
-      background: #fafafa;
-      color: #222;
+      text-align: center;          /* centers content */
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f5f5f5;   /* optional light background */
+    }
+    img {
+      max-width: 90%;              /* scales image proportionally */
+      height: auto;
+      border-radius: 8px;          /* optional rounded corners */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2); /* optional shadow */
+    }
+    h1 {
+      margin-top: 20px;
+    }
+    p {
+      max-width: 600px;
+      margin: 10px auto 20px auto;
+      line-height: 1.5;
     }
   </style>
 </head>
 <body>
-  <h1>ctrl-B.</h1>
-  <img src="images/ctrlb_basement.JPG" width="800">
-  <p>We are an experimental electro-acoustic trio based in Portland, OR.</p>
+
+  <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement">
+
+  <h1>Ctrl-B</h1>
+  <p>Experimental electro-acoustic trio based in Portland, OR</p>
+
 </body>
 </html>
