--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   <style>
     body {
       text-align: center;          /* centers content */
-      font-family: Arial, sans-serif;
+      font-family: Courier, sans-serif;
       margin: 20px;
       background-color: #f5f5f5;   /* optional light background */
     }
+    img2 {
+      max-width: 75%;
+      height: auto
+    }
+
+    
     img {
       max-width: 75%;              /* scales image proportionally */
       height: auto;
@@ -29,10 +35,11 @@
 </head>
 <body>
 
+  <img2 src="images/logo.gif">
   <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement">
+ 
 
-  <h1>Ctrl-B</h1>
-  <p>Experimental electro-acoustic trio based in Portland, OR</p>
+ <p>Experimental electro-acoustic trio based in Portland, OR</p>
 
 </body>
 </html>
