--- a/index.html
+++ b/index.html
@@ -6,26 +6,37 @@
   <title>Ctrl-B</title>
   <style>
     body {
-      text-align: center;          /* center all content */
+      margin: 0;
       font-family: Courier, sans-serif;
-      margin: 20px;
-      background-color: #f5f5f5;   /* optional light background */
+      background-color: #f5f5f5;
     }
 
-    /* Logo at top */
+    /* Container for header + content */
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* center main content horizontally */
+      position: relative;
+      padding: 20px;
+    }
+
+    /* Logo top-left */
     .logo {
-      max-width: 200px;            /* scale logo */
-      height: auto;                /* keep aspect ratio */
-      margin-bottom: 20px;         /* space below logo */
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      max-width: 150px;
+      height: auto;
     }
 
     /* Main image */
     .main-img {
-      max-width: 90%;              /* responsive width */
-      height: auto;                /* preserve aspect ratio */
+      max-width: 50%;
+      height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      margin-bottom: 20px;         /* space below main image */
+      margin-top: 100px; /* space for logo */
+      margin-bottom: 20px;
     }
 
     h1 {
@@ -34,22 +45,34 @@
 
     p {
       max-width: 600px;
-      margin: 10px auto 20px auto;
+      text-align: center;
       line-height: 1.5;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      .main-img {
+        max-width: 90%;
+        margin-top: 80px;
+      }
+      .logo {
+        max-width: 120px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Logo at top -->
-  <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
+  <div class="container">
+    <!-- Logo top-left -->
+    <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
 
-  <!-- Main page image -->
-  <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
+    <!-- Main page image -->
+    <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
 
-  <!-- Heading and description -->
-  <h1>Ctrl-B</h1>
+    <!-- Heading and description -->
   <p>Experimental electro-acoustic trio based in Portland, OR</p>
+  </div>
 
 </body>
 </html>
