--- a/index.html
+++ b/index.html
@@ -7,32 +7,28 @@
   <style>
     body {
       margin: 0;
+      padding: 20px;
       font-family: Courier, sans-serif;
       background-color: #f5f5f5;
-      text-align: center; /* centers all content */
-      padding: 20px;
+      text-align: center; /* centers all inline elements */
     }
 
     /* Logo centered */
     .logo {
+      display: block;
+      margin: 0 auto 30px auto; /* top/bottom spacing and centered horizontally */
       max-width: 200px;
       height: auto;
-      margin-bottom: 30px; /* space between logo and main image */
     }
 
     /* Main image */
     .main-img {
+      display: block;
+      margin: 0 auto;
       max-width: 50%;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      margin-bottom: 20px;
-    }
-
-    p {
-      max-width: 600px;
-      margin: 10px auto 20px auto;
-      line-height: 1.5;
     }
 
     /* Responsive adjustments */
@@ -53,8 +49,6 @@
 
   <!-- Main page image -->
   <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
-
-  <p>Experimental electro-acoustic trio based in Portland, OR</p>
 
 </body>
 </html>
