--- a/index.html
+++ b/index.html
@@ -7,16 +7,38 @@
   <style>
     body {
       margin: 0;
-      padding: 20px;
+      padding: 0;
       font-family: Courier, sans-serif;
-      background-color: #f5f5f5;
-      text-align: center; /* centers all inline elements */
+      text-align: center;
+
+      /* Background image */
+      background-image: url('images/chipboard.jpg'); /* replace with your image */
+      background-size: cover;       /* covers entire viewport */
+      background-position: center;  /* centers the image */
+      background-repeat: no-repeat;
+      background-attachment: fixed; /* stays when scrolling */
+      
+      /* Overlay for subtle darkening effect */
+      position: relative;
+      color: #fff; /* optional text color if you add text later */
+    }
+
+    /* Optional overlay div for darkening background */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.3); /* subtle dark overlay */
+      z-index: -1;
     }
 
     /* Logo centered */
     .logo {
       display: block;
-      margin: 0 auto 30px auto; /* top/bottom spacing and centered horizontally */
+      margin: 40px auto 40px auto; /* spacing above and below */
       max-width: 200px;
       height: auto;
     }
@@ -24,11 +46,11 @@
     /* Main image */
     .main-img {
       display: block;
-      margin: 0 auto;
+      margin: 0 auto 60px auto; /* spacing below main image */
       max-width: 50%;
       height: auto;
       border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
 
     /* Responsive adjustments */
