Fix background image filename case sensitivity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       text-align: center;
 
       /* Background image */
-      background-image: url('images/chipboard.jpg'); /* replace with your image */
+      background-image: url('images/Chipboard.jpg'); /* replace with your image */
       background-size: cover;       /* covers entire viewport */
       background-position: center;  /* centers the image */
       background-repeat: no-repeat;
