--- a/index.html
+++ b/index.html
@@ -10,29 +10,8 @@
       padding: 0;
       font-family: Courier, sans-serif;
       text-align: center;
-
-      /* Background image */
-      background-image: url('images/Chipboard.jpg'); /* replace with your image */
-      background-size: cover;       /* covers entire viewport */
-      background-position: center;  /* centers the image */
-      background-repeat: no-repeat;
-      background-attachment: fixed; /* stays when scrolling */
-      
-      /* Overlay for subtle darkening effect */
-      position: relative;
-      color: #fff; /* optional text color if you add text later */
-    }
-
-    /* Optional overlay div for darkening background */
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.3); /* subtle dark overlay */
-      z-index: -1;
+      background-color: #fef1d3; /* manila color */
+      color: #000; /* text color if needed */
     }
 
     /* Logo centered */
@@ -50,7 +29,7 @@
       max-width: 50%;
       height: auto;
       border-radius: 8px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
     /* Responsive adjustments */
