--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
       padding: 0;
       font-family: Courier, sans-serif;
       text-align: center;
-      background-color: #fef1d3; /* manila background */
+      background-color: #fef1d3; /* manila */
       color: #000;
     }
 
-    /* Logo */
     .logo {
       display: block;
       margin: 40px auto 30px auto;
@@ -22,57 +21,34 @@
       height: auto;
     }
 
-    /* Main image */
     .main-img {
       display: block;
-      margin: 0 auto 60px auto;
+      margin: 0 auto 30px auto;
       max-width: 50%;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
-    /* Optional caption or future text styling */
-    p {
-      max-width: 600px;
-      margin: 0 auto 60px auto;
-      line-height: 1.5;
-      font-size: 1rem;
+    .watch-link {
+      display: inline-block;
+      margin-bottom: 60px;
+      padding: 12px 24px;
+      background-color: #222;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
 
-    /* Tablet and smaller screens */
-    @media (max-width: 1024px) {
-      .logo {
-        max-width: 160px;
-        margin: 30px auto 25px auto;
-      }
-
-      .main-img {
-        max-width: 70%;
-        margin-bottom: 40px;
-      }
-
-      p {
-        font-size: 0.95rem;
-      }
+    .watch-link:hover {
+      background-color: #444;
     }
 
-    /* Mobile phones */
     @media (max-width: 600px) {
-      .logo {
-        max-width: 120px;
-        margin: 25px auto 20px auto;
-      }
-
       .main-img {
         max-width: 90%;
-        margin-bottom: 30px;
-      }
-
-      p {
-        font-size: 0.9rem;
-        line-height: 1.4;
-        margin: 0 20px 40px 20px;
       }
     }
   </style>
@@ -81,6 +57,8 @@
 
   <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
   <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
+
+  <a href="watch.html" class="watch-link">Watch</a>
 
 </body>
 </html>
