Replace iframes with video elements in watch.html

--- a/watch.html
+++ b/watch.html
@@ -58,9 +58,9 @@
 
   <div class="video-container">
     <!-- Replace VIDEO_ID_X with your YouTube IDs -->
-    <iframe src="https://dl.dropboxusercontent.com/scl/fi/upn1klnhqocmhlyn5fbzi/ctrlB_-NorthViewGallery_Oct23_2025.mp4" title="Live @ North View Gallery 10/23/2025"></iframe>
-    <iframe src="https://dl.dropboxusercontent.com/scl/fi/co9ntbztnfvkgc7om6iwz/ctrlB_-leavencommunitycenter_-OCT12_2024.mp4" title="Live @ Leaven Community Center 10/12/2024"></iframe>
-    <iframe src="hhttps://dl.dropboxusercontent.com/scl/fi/4xzi9dd1dva3uq3lqvvms/ctrlB_-NOFUN_AUG8_2024.mp4" title="Live @ NO FUN 8/8/2025"></iframe>
+    <video src="https://dl.dropboxusercontent.com/scl/fi/upn1klnhqocmhlyn5fbzi/ctrlB_-NorthViewGallery_Oct23_2025.mp4" title="Live @ North View Gallery 10/23/2025"></iframe>
+    <video src="https://dl.dropboxusercontent.com/scl/fi/co9ntbztnfvkgc7om6iwz/ctrlB_-leavencommunitycenter_-OCT12_2024.mp4" title="Live @ Leaven Community Center 10/12/2024"></iframe>
+    <video src="https://dl.dropboxusercontent.com/scl/fi/4xzi9dd1dva3uq3lqvvms/ctrlB_-NOFUN_AUG8_2024.mp4" title="Live @ NO FUN 8/8/2025"></iframe>
   </div>
 
   <a href="index.html" class="back-link">Back</a>
