Replace video tags with YouTube iframes

--- a/watch.html
+++ b/watch.html
@@ -57,10 +57,24 @@
   <h1>Watch</h1>
 
   <div class="video-container">
-    <!-- Replace VIDEO_ID_X with your YouTube IDs -->
-    <video src="https://dl.dropboxusercontent.com/scl/fi/upn1klnhqocmhlyn5fbzi/ctrlB_-NorthViewGallery_Oct23_2025.mp4?raw=1" title="Live @ North View Gallery 10/23/2025"></iframe>
-    <video src="https://dl.dropboxusercontent.com/scl/fi/co9ntbztnfvkgc7om6iwz/ctrlB_-leavencommunitycenter_-OCT12_2024.mp4?raw=1" title="Live @ Leaven Community Center 10/12/2024"></iframe>
-    <video src="https://dl.dropboxusercontent.com/scl/fi/4xzi9dd1dva3uq3lqvvms/ctrlB_-NOFUN_AUG8_2024.mp4?raw=1" title="Live @ NO FUN 8/8/2025"></iframe>
+    <!-- Replace VIDEO_ID_X below with your YouTube video IDs -->
+    <iframe 
+      src="https://www.youtube.com/embed/Xn2nhQ_AXK0" 
+      title="Live @ North View Gallery 10/23/2025" 
+      allowfullscreen>
+    </iframe>
+
+    <iframe 
+      src="https://www.youtube.com/embed/pDEknaz-cMU" 
+      title="Live @ Leaven Community Center 10/12/2024" 
+      allowfullscreen>
+    </iframe>
+
+    <iframe 
+      src="https://www.youtube.com/embed/pDEknaz-cMU" 
+      title="Live @ NO FUN 8/8/2025" 
+      allowfullscreen>
+    </iframe>
   </div>
 
   <a href="index.html" class="back-link">Back</a>
