Update YouTube video source in watch.html

--- a/watch.html
+++ b/watch.html
@@ -71,7 +71,7 @@
     </iframe>
 
     <iframe 
-      src="https://www.youtube.com/embed/pDEknaz-cMU" 
+      src="https://www.youtube.com/embed/0Kl-4_iN31c" 
       title="Live @ NO FUN 8/8/2025" 
       allowfullscreen>
     </iframe>
