Change background color to a lighter shade

--- a/watch.html
+++ b/watch.html
@@ -6,7 +6,7 @@
   <title>Ctrl-B | Watch</title>
   <style>
     body {
-      background-color: #fef1d3;
+      background-color: #FFFFF0;
       font-family: Courier, sans-serif;
       text-align: center;
       margin: 0;
