Change background color to #FFFFF0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       font-family: Courier, sans-serif;
       text-align: center;
-      background-color: #fef1d3; /* manila */
+      background-color: #FFFFF0; 
       color: #000;
     }
 
