Add EPK link with styling to index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
       background-color: #444;
     }
 
+    a.epk-link {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #0066cc;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+}
+
+a.epk-link:hover {
+  background-color: #004c99;
+}
+
     @media (max-width: 600px) {
       .main-img {
         max-width: 90%;
@@ -59,6 +74,8 @@
   <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
 
   <a href="watch.html" class="watch-link">Watch</a>
+  <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1">EPK</a>
+
 
 </body>
 </html>
