--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       font-family: Courier, sans-serif;
       text-align: center;
-      background-color: #FFFFF0; 
+      background-color: #FFFFF0;
       color: #000;
     }
 
@@ -23,43 +23,49 @@
 
     .main-img {
       display: block;
-      margin: 0 auto 30px auto;
+      margin: 0 auto 40px auto;
       max-width: 50%;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
-    .watch-link {
-      display: inline-block;
+    /* Button container */
+    .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px; /* space between buttons */
+      flex-wrap: wrap; /* keeps layout clean on mobile */
       margin-bottom: 60px;
+    }
+
+    .watch-link,
+    .epk-link {
+      display: inline-block;
       padding: 12px 24px;
-      background-color: #222;
-      color: #fff;
-      text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
+      text-decoration: none;
       transition: background-color 0.3s ease;
+    }
+
+    .watch-link {
+      background-color: #222;
+      color: #fff;
     }
 
     .watch-link:hover {
       background-color: #444;
     }
 
-    a.epk-link {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #0066cc;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 6px;
-  transition: background-color 0.3s ease;
-}
+    .epk-link {
+      background-color: #0066cc;
+      color: #fff;
+    }
 
-a.epk-link:hover {
-  background-color: #004c99;
-}
+    .epk-link:hover {
+      background-color: #004c99;
+    }
 
     @media (max-width: 600px) {
       .main-img {
@@ -71,11 +77,12 @@ a.epk-link:hover {
 <body>
 
   <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
-  <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
+  <img src="images/ctrlb_basement.JPG" alt="Ctrl-B performing in basement" class="main-img">
 
-  <a href="watch.html" class="watch-link">Watch</a>
-  <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1">EPK</a>
-
+  <div class="button-container">
+    <a href="watch.html" class="watch-link">Watch</a>
+    <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1" class="epk-link">EPK</a>
+  </div>
 
 </body>
 </html>
