Change background color for epk-link styles

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     }
 
     .epk-link {
-      background-color: #0066cc;
+      background-color: #222;
       color: #fff;
     }
 
     .epk-link:hover {
-      background-color: #004c99;
+      background-color: #444;
     }
 
     @media (max-width: 600px) {
