--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       display: inline-block;
       padding: 12px 24px;
       border-radius: 6px;
-      font-weight: bold;
+      font-weight: normal;
       text-decoration: none;
       transition: background-color 0.3s ease;
     }
