Refactor about.html styles and structure
Updated styles and removed header and navigation elements.

--- a/about.html
+++ b/about.html
@@ -6,47 +6,42 @@
   <title>About – ctrl-B</title>
   <style>
     body {
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-family: "Courier New", Courier, monospace;
       background-color: #FFFFF0;
       color: #222;
       margin: 0;
       padding: 0;
       line-height: 1.6;
-    }
-    header {
       text-align: center;
-      padding: 2rem 1rem;
     }
-    nav {
-      text-align: center;
-      margin-bottom: 2rem;
+
+    .logo {
+      display: block;
+      margin: 40px auto 30px auto;
+      max-width: 200px;
+      height: auto;
     }
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s;
-    }
-    nav a:hover {
-      border-color: #333;
-    }
+
     main {
       max-width: 800px;
       margin: 0 auto;
       padding: 1rem 2rem 3rem;
-      background-color: #FFFFF0;
+      text-align: left;
     }
+
     h1 {
-      text-align: center;
-      font-size: 2em;
-      margin-bottom: 1.5rem;
+      display: none;
     }
+
     p {
       margin-bottom: 1rem;
-      text-align: justify;
     }
+
+    a {
+      color: #000;
+      text-decoration: underline;
+    }
+
     @media (max-width: 600px) {
       main {
         padding: 1rem;
@@ -55,18 +50,10 @@
   </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="listen.html">Listen</a>
-      <a href="watch.html">Watch</a>
-      <a href="epk.zip" download>EPK</a>
-    </nav>
-  </header>
+
+  <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
 
   <main>
-    <h1>About ctrl-B</h1>
     <p>The members of ctrl-B met while learning to navigate open-source coding platforms and DIY electronics in a community college class. Where any of it might lead, no one was entirely sure—but it was fun figuring it out along the way. Their first performance came together under similar circumstances, and that spirit has shaped the project ever since. The experimental trio aims to create something beautiful in an ever-changing, unpredictable world, to roll with it when things fall apart, and to enjoy the process as it unfolds.</p>
 
     <p>After nearly a year studying computer programming, microcontrollers, electronics, and sound design together, they found themselves challenged to create a group installation that showcased their newly acquired skills. The brainstorming sessions that followed were wide-ranging and chaotic — too many ideas from too many voices that pointed nowhere. Eventually, Ben Engen, Candace Houston, and Brody Mennitto decided to lean on their growing friendship, break off into a smaller group, and compose a piece that combined their shared interests in electronics and experimentation with their performance backgrounds.</p>
