Add basic HTML structure for listen.html

--- a/listen.html
+++ b/listen.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Listen – ctrl-B</title>
+  <style>
+    body {
+      font-family: "Courier New", Courier, monospace;
+      background-color: #FFFFF0;
+      color: #222;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .logo {
+      display: block;
+      margin: 40px auto 30px auto;
+      max-width: 200px;
+      height: auto;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body>
+
+  <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
+
+  <main>
+    <p>Coming soon.</p>
+  </main>
+
+</body>
+</html>
 
