--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
   <title>Ctrl-B</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: Courier, sans-serif;
-      text-align: center;
+      font-family: "Courier New", Courier, monospace;
       background-color: #FFFFF0;
       color: #000;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
+    /* Header / Logo */
     .logo {
       display: block;
       margin: 40px auto 30px auto;
@@ -21,64 +25,104 @@
       height: auto;
     }
 
+    /* Main content */
+    main {
+      flex: 1;
+      padding: 20px;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
     .main-img {
-      display: block;
-      margin: 0 auto 40px auto;
       max-width: 50%;
       height: auto;
       border-radius: 8px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      display: block;
+      margin: 0 auto 30px auto;
     }
 
-    /* Button container */
-    .button-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px; /* space between buttons */
-      flex-wrap: wrap; /* responsive for small screens */
-      margin-bottom: 60px;
-    }
-
-    .nav-link {
+    .page-link {
       display: inline-block;
+      margin: 10px;
       padding: 12px 24px;
+      background-color: #222;
+      color: #fff;
+      text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      text-decoration: none;
-      color: #fff;
       transition: background-color 0.3s ease;
     }
 
-    .watch-link { background-color: #222; }
-    .watch-link:hover { background-color: #444; }
+    .page-link:hover {
+      background-color: #444;
+    }
 
-    .epk-link { background-color: #0066cc; }
-    .epk-link:hover { background-color: #004c99; }
+    /* Footer / navigation */
+    footer {
+      padding: 20px;
+      background: none;
+    }
 
-    .about-link { background-color: #009966; }
-    .about-link:hover { background-color: #007a52; }
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
 
-    .listen-link { background-color: #cc6600; }
-    .listen-link:hover { background-color: #a65200; }
+    .nav-links a {
+      text-decoration: none;
+      color: #000;
+      font-weight: bold;
+      border: 1px solid #000;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      background-color: #000;
+      color: #FFFFF0;
+    }
 
     @media (max-width: 600px) {
       .main-img {
         max-width: 90%;
+      }
+      main {
+        padding: 1rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
-  <img src="images/ctrlb_basement.JPG" alt="Ctrl-B performing in basement" class="main-img">
+  <!-- Header -->
+  <header>
+    <img src="images/logo.gif" alt="Ctrl-B logo" class="logo">
+  </header>
 
-  <div class="button-container">
-    <a href="about.html" class="nav-link about-link">About</a>
-    <a href="listen.html" class="nav-link listen-link">Listen</a>
-    <a href="watch.html" class="nav-link watch-link">Watch</a>
-    <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1" class="nav-link epk-link">EPK</a>
-  </div>
+  <!-- Main content -->
+  <main>
+    <img src="images/ctrlb_basement.JPG" alt="Ctrl-B in basement" class="main-img">
+
+    <!-- Page links -->
+    <a href="watch.html" class="page-link">Watch</a>
+    <a href="listen.html" class="page-link">Listen</a>
+    <a href="about.html" class="page-link">About</a>
+    <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1" class="page-link">EPK</a>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="listen.html">Listen</a>
+      <a href="watch.html">Watch</a>
+      <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1">EPK</a>
+    </div>
+  </footer>
 
 </body>
 </html>
