--- a/listen.html
+++ b/listen.html
@@ -81,14 +81,15 @@
 
   <!-- Footer -->
   <footer>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="listen.html">Listen</a>
-      <a href="watch.html">Watch</a>
-      <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1">EPK</a>
-    </div>
-  </footer>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="listen.html">Listen</a>
+    <a href="watch.html">Watch</a>
+    <a href="shows.html">Shows</a>
+    <a href="https://dl.dropboxusercontent.com/scl/fi/pohtkj5h24yzc2kb4tq1m/ctrlB_EPK.zip?rlkey=htie0crq8rhciz7pfubyfnzp2&st=l9ldvutl&raw=1">EPK</a>
+  </div>
+</footer>
 
 </body>
 </html>
