Update about.html with revised text and contact info

--- a/about.html
+++ b/about.html
@@ -98,9 +98,9 @@
 
     <p><strong>Pianist, occasional bassist, and noise-maker Brody Mennitto</strong> moved to Portland, OR from Pittsburgh, PA in 2007 and has since been active in the city’s DIY and punk communities. Largely self-taught, they have continued honing their craft since becoming a student at PCC and are currently pursuing a Bachelor of Science in Sonic Arts and Music Production at Portland State University. Brody is also a member of the post-hardcore trio Inny and spends a lot of time writing, drawing, and watching movies.</p>
 
-    <p>The first recordings of ctrl-B were engineered by Evan Mersky at Red Lantern Studio in Portland and later mixed by the band in their home studio. Their debut album is scheduled for release in late 2026. In the meantime, recordings and videos of several performances can be found at <a href="http://www.ctrl-b-pdx.lol" target="_blank">www.ctrl-b-pdx.lol</a>.</p>
+    <p>The first recordings of ctrl-B were engineered by Evan Mersky at Red Lantern Studio in Portland and later mixed by the band in their home studio. Their debut album is scheduled for release in late 2026.</p>
 
-    <p>For booking, email <a href="mailto:ctrl.b.pdx@gmail.com">ctrl.b.pdx@gmail.com</a>.</p>
+    <p>For booking, press, or inquiries, write ctrl-B an email at <a href="mailto:ctrl.b.pdx@gmail.com">ctrl.b.pdx@gmail.com</a>.</p>
   </main>
 
   <!-- Footer -->
